# waypoint_autonavigator

./: README.md  package.xml  setup.cfg  setup.py
launch/: map_collision_injector_launch.py
waypoint_autonavigator/: main.py  map_collision_injector.py  map_collision_injector_backup.py
